--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: 14
           
       - name: Install dependencies
-        run: npm install && npm install react-scripts
+        run: npm install && npm install react-scripts && npm install gh-pages --save-dev
 
       - name: Build
         run: npm run build
